Fix environment variables and code

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-USERNAME="YOUR_BLUESKY_USERNAME"
-PASSWORD="YOUR_BLUESKY_PASSWORD"
+EMAIL="YOUR_BLUESKY_EMAIL"
+PASSWORD="YOUR_BLUESKY_PASSWORD" # https://bsky.app/settings/app-passwords
