--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "@typescript-eslint/parser": "^8.0.1",
+    "dotenv": "^16.4.5",
     "esbuild": "^0.23.0",
     "eslint-config-love": "^62.0.0",
     "eslint-plugin-import": "^2.29.1",
