Changed to allow translation

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 EMAIL="YOUR_BLUESKY_EMAIL"
 PASSWORD="YOUR_BLUESKY_PASSWORD" # https://bsky.app/settings/app-passwords
+DEEPL_API_KEY="YOUR_DEEPL_API_KEY" # https://www.deepl.com/pro-account
