--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,6 @@
   "recommendations": [
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
-    "EditorConfig.EditorConfig",
-    "streetsidesoftware.code-spell-checker"
+    "EditorConfig.EditorConfig"
   ]
 }
