--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "sort": "node ./scripts/sort.js",
+    "start": "node dist/index.js",
     "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@atproto/api": "^0.12.29",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
@@ -45,9 +50,5 @@
   },
   "engines": {
     "yarn": "Please use npm instead of yarn"
-  },
-  "dependencies": {
-    "@atproto/api": "^0.12.29",
-    "ws": "^8.18.0"
   }
 }
