--- a/.github/workflows/deploy-to-dokku.yaml
+++ b/.github/workflows/deploy-to-dokku.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Push to dokku
         uses: dokku/github-action@v1.4.0
         with:
-          git_remote_url: dokku@${{ secrets.DOKKU_HOST }}:22/${{ secrets.DOKKU_APP_NAME }}
+          git_remote_url: dokku@${{ secrets.DOKKU_HOST }}:22/evacuate
           ssh_private_key: ${{ secrets.DOKKU_SSH_PRIVATE_KEY }}
           branch: 'main'
           git_push_flags: '--force'
