--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "eslint-plugin-promise": "^7.1.0",
     "prettier": "^3.3.3",
     "tsx": "^4.17.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vite-tsconfig-paths": "^5.0.1",
+    "vitest": "^2.0.5"
   },
   "engines": {
     "node": ">=20.0.0"
