--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/node": "^22.1.0",
+    "@types/node": "^22.2.0",
     "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "@typescript-eslint/parser": "^8.0.1",
     "dotenv": "^16.4.5",
     "esbuild": "^0.23.0",
+    "eslint": "^8.57.0",
     "eslint-config-love": "^62.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^17.10.2",
