Rename environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-EMAIL="YOUR_BLUESKY_EMAIL"
-PASSWORD="YOUR_BLUESKY_PASSWORD" # https://bsky.app/settings/app-passwords
+BLUESKY_EMAIL="YOUR_BLUESKY_EMAIL"
+BLUESKY_PASSWORD="YOUR_BLUESKY_PASSWORD" # https://bsky.app/settings/app-passwords
