Added Mastodon sending functionality

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
+# Required value in Bluesky
 BLUESKY_EMAIL="YOUR_BLUESKY_EMAIL"
 BLUESKY_PASSWORD="YOUR_BLUESKY_PASSWORD" # https://bsky.app/settings/app-passwords
+
+# Required value in Mastodon
+MASTODON_URL="YOUR_MASTODON_URL" # https://mastodon.social
+MASTODON_ACCESS_TOKEN="YOUR_MASTDON_ACCESS_TOKEN" # https://mastodon.social/settings/applications
