Changed to be able to monitor with newrelic

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,11 @@ BLUESKY_PASSWORD="YOUR_BLUESKY_PASSWORD" # https://bsky.app/settings/app-passwor
 # Required value in Mastodon
 MASTODON_URL="YOUR_MASTODON_URL" # https://mastodon.social
 MASTODON_ACCESS_TOKEN="YOUR_MASTDON_ACCESS_TOKEN" # https://mastodon.social/settings/applications
+
+# NewRelic environment variables
+# See the following websites
+# 1. https://docs.newrelic.com/docs/apm/agents/nodejs-agent/installation-configuration/install-nodejs-agent/
+# 2. https://docs.newrelic.com/docs/apm/agents/nodejs-agent/installation-configuration/nodejs-agent-configuration/#environment
+
+NEW_RELIC_APP_NAME="YOUR_NEW_RELIC_APP_NAME"
+NEW_RELIC_LICENSE_KEY="YOUR_NEW_RELIC_LICENSE_KEY"
