--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@atproto/api": "^0.13.1",
     "masto": "^6.8.0",
+    "newrelic": "^12.2.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
