--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["love"],
+  "extends": ["love", "prettier"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
