--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@atproto/api": "^0.13.1",
     "masto": "^6.8.0",
     "newrelic": "^12.2.0",
+    "nostr-tools": "^2.7.2",
     "ws": "^8.18.0"
   },
   "devDependencies": {
@@ -54,7 +55,8 @@
     "tsx": "^4.17.0",
     "typescript": "^5.5.4",
     "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "websocket-polyfill": "^1.0.0"
   },
   "engines": {
     "node": ">=20.x"
