Update documentation on environment variables, etc.

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ MASTODON_ACCESS_TOKEN="YOUR_MASTDON_ACCESS_TOKEN" # https://mastodon.social/sett
 
 NEW_RELIC_APP_NAME="YOUR_NEW_RELIC_APP_NAME"
 NEW_RELIC_LICENSE_KEY="YOUR_NEW_RELIC_LICENSE_KEY"
+
+# Please specify if necessary
+NOSTR_PRIVATE_KEY="YOUR_NOST_PRIVATE_KEY"
