Fixed a bug that prevented posting to Nostr

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,9 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["ES2022"],
-    "module": "CommonJS",
+    "module": "ES2015",
     "moduleDetection": "auto",
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
     "declaration": false,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
