--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "masto": "^6.8.0",
     "newrelic": "^12.2.0",
     "nostr-tools": "^2.7.2",
+    "pino": "^9.3.2",
     "ws": "^8.18.0"
   },
   "devDependencies": {
