Fixed problem with New Relic not working

--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "build": "node ./scripts/rm.js dist && node scripts/build.js",
+    "build": "node ./scripts/rm.mjs dist && node scripts/build.mjs",
     "dev": "tsx src/index.ts",
     "format": "prettier --write .",
     "format:check": "prettier --check 'src/**/*.ts'",
     "format:write": "prettier --write 'src/**/*.ts'",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "sort": "node ./scripts/sort.js",
+    "sort": "node ./scripts/sort.mjs",
     "start": "node dist/index.js",
     "test": "vitest",
     "test:watch": "vitest --watch",
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@atproto/api": "^0.13.1",
+    "@newrelic/pino-enricher": "^1.1.1",
     "masto": "^6.8.0",
     "newrelic": "^12.2.0",
     "nostr-tools": "^2.7.2",
