--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "node": true
   },
   "extends": ["love", "prettier"],
+  "exclude": ["node_modules", "scripts"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
