All migrated to Biome

--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   "main": "index.js",
   "scripts": {
     "build": "node ./scripts/rm.mjs dist && node scripts/build.mjs",
+    "check": "biome check ./src",
+    "check:write": "biome check --write ./src",
     "dev": "tsx src/index.ts",
-    "format": "prettier --write .",
-    "format:check": "prettier --check 'src/**/*.ts'",
-    "format:write": "prettier --write 'src/**/*.ts'",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "format": "biome format .",
+    "format:write": "biome format --write ./src",
+    "lint": "biome lint ./src",
     "sort": "node ./scripts/sort.mjs",
     "start": "node dist/index.js",
     "test": "vitest",
@@ -41,19 +41,11 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@types/node": "^22.5.1",
     "@types/ws": "^8.5.12",
-    "@typescript-eslint/eslint-plugin": "^7.10.0",
-    "@typescript-eslint/parser": "7.10.0",
     "dotenv": "^16.4.5",
     "esbuild": "^0.23.1",
-    "eslint": "^8.57.0",
-    "eslint-config-love": "^47.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.0.0",
-    "eslint-plugin-promise": "^6.1.0",
-    "prettier": "^3.3.3",
     "tsx": "^4.19.0",
     "typescript": "^5.5.4",
     "vite-tsconfig-paths": "^5.0.1",
