--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,10 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.validate.enable": true,
   "typescript.format.enable": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode", // Prettier formatter.
+  "editor.defaultFormatter": "biomejs.biome", // Biome formatter.
   "editor.formatOnSave": true,
-  "editor.codeActionsOnSave": [
-    "source.fixAll.eslint",
-    "source.addMissingImports"
-  ]
+  "editor.codeActionsOnSave": {
+    "quickfix.biome": "explicit",
+    "source.addMissingImports.ts": "always"
+  }
 }
