--- a/.github/workflows/deployments.yaml
+++ b/.github/workflows/deployments.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: Run ESLint
+      - name: Run Biome
         run: npm run lint
 
   deploy:
