--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -27,7 +27,7 @@ jobs:
         run: npm run lint
 
   deploy:
-    name: Deploy to Preview
+    name: Deploy
     runs-on: ubuntu-latest
     needs: lint # Run only if the lint job succeeds
 
@@ -37,7 +37,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Push to Dokku (Preview)
+      - name: Push to Dokku
         uses: dokku/github-action@v1.5.0
         with:
           git_remote_url: ssh://dokku@${{ secrets.DOKKU_PREVIEW_HOST }}:${{ secrets.DOKKU_PREVIEW_PORT }}/${{ secrets.DOKKU_PREVIEW_APP_NAME }}
