--- a/.github/workflows/ossar.yaml
+++ b/.github/workflows/ossar.yaml
@@ -10,10 +10,10 @@ name: OSSAR
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "develop" ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "main" ]
+    branches: [ "main", "develop" ]
   schedule:
     - cron: '0 10 * * 1'
 
