--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -2,7 +2,7 @@ name: Production
 
 on:
   push:
-    branches: [main]
+    branches: ["main"]
 
 jobs:
   lint:
@@ -18,7 +18,7 @@ jobs:
       - name: Set Up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: "20.x"
 
       - name: Install Dependencies
         run: npm install
@@ -42,5 +42,5 @@ jobs:
         with:
           git_remote_url: ssh://dokku@${{ secrets.DOKKU_HOST }}:${{ secrets.DOKKU_PORT }}/${{ secrets.DOKKU_APP_NAME }}
           ssh_private_key: ${{ secrets.DOKKU_SSH_PRIVATE_KEY }}
-          branch: 'main'
+          branch: "main"
           git_push_flags: --force
