Added ability to send to webhooks

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ NEW_RELIC_LICENSE_KEY="YOUR_NEW_RELIC_LICENSE_KEY"
 
 # Please specify if necessary
 NOSTR_PRIVATE_KEY="YOUR_NOST_PRIVATE_KEY"
+
+# Webhook URL
+WEBHOOK_URL="YOUR_WEBHOOK_URL"
