Eliminate formatter errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.validate.enable": true,
   "typescript.format.enable": true,
-  "editor.defaultFormatter": "biomejs.biome", // Biome formatter.
+  "editor.defaultFormatter": "biomejs.biome",
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "quickfix.biome": "explicit",
