Eliminate formatter errors

--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "evacuate",
   "version": "1.0.0",
   "description": "",
-  "keywords": [
-    "evacuate"
-  ],
+  "keywords": ["evacuate"],
   "homepage": "https://github.com/evacuate/evacuate#readme",
   "bugs": {
     "url": "https://github.com/evacuate/evacuate/issues"
