Added ability to post messages to Slack

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "evacuate",
   "version": "1.0.0",
   "description": "",
-  "keywords": ["evacuate"],
+  "keywords": [
+    "evacuate"
+  ],
   "homepage": "https://github.com/evacuate/evacuate#readme",
   "bugs": {
     "url": "https://github.com/evacuate/evacuate/issues"
@@ -31,6 +33,7 @@
   "dependencies": {
     "@atproto/api": "^0.13.7",
     "@newrelic/pino-enricher": "^1.1.1",
+    "@slack/web-api": "^7.5.0",
     "masto": "^6.8.0",
     "newrelic": "^12.5.0",
     "nostr-tools": "^2.7.2",
