Add and execute sort commands

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "evacuate",
   "version": "1.0.0",
   "description": "",
-  "keywords": ["evacuate"],
+  "keywords": [
+    "evacuate"
+  ],
   "homepage": "https://github.com/evacuate/evacuate#readme",
   "bugs": {
     "url": "https://github.com/evacuate/evacuate/issues"
@@ -23,6 +25,7 @@
     "format": "biome format .",
     "format:write": "biome format --write ./src",
     "lint": "biome lint ./src",
+    "sort": "node scripts/sort.mjs",
     "start": "node dist/index.cjs",
     "test": "vitest",
     "test:watch": "vitest --watch",
