--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "check": "biome check ./src",
     "check:write": "biome check --write ./src",
     "dev": "tsx src/index.ts",
-    "format": "biome format .",
+    "format": "biome format ./src",
     "format:write": "biome format --write ./src",
     "lint": "biome lint ./src",
     "sort": "node scripts/sort.mjs",
