--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,20 @@
 {
   "compilerOptions": {
-    "alwaysStrict": true,
-    "baseUrl": ".",
+    "target": "ES2022",
+    "module": "ES2022",
+    "strict": true,
+    "moduleResolution": "Bundler",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["ES2015"],
-    "module": "ES2022",
-    "moduleDetection": "auto",
-    "moduleResolution": "Bundler",
-    "declaration": false,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "outDir": "./dist", // Output directory
-    "removeComments": true,
     "skipLibCheck": true,
-    "strict": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
-    "target": "ES2015",
-    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
     },
-    "resolveJsonModule": true,
+    "outDir": "./dist",
+    "removeComments": true,
     "isolatedModules": true
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
