--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "evacuate",
   "version": "1.0.0",
   "description": "",
-  "keywords": [
-    "evacuate"
-  ],
+  "keywords": ["evacuate"],
   "homepage": "https://github.com/evacuate/evacuate#readme",
   "bugs": {
     "url": "https://github.com/evacuate/evacuate/issues"
@@ -53,6 +51,7 @@
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.1.3"
   },
+  "packageManager": "yarn@1.22.22",
   "engines": {
     "node": "20.18.0"
   }
