--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -30,6 +30,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: lint # Run only if the lint job succeeds
+    if: github.repository == 'evacuate/evacuate' && github.ref == 'refs/heads/develop' # Run only if repository is evacuate/evacuate
 
     steps:
       - name: Clone Repository
