--- a/.github/workflows/service.yml
+++ b/.github/workflows/service.yml
@@ -28,13 +28,12 @@ jobs:
           echo "DOKKU_APP_NAME=$([[ '${{ env.IS_PRODUCTION }}' == 'true' ]] && echo '${{ secrets.DOKKU_APP_NAME }}' || echo '${{ secrets.DOKKU_PREVIEW_APP_NAME }}')" >> $GITHUB_ENV
 
       - name: Create GitHub Deployment
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          curl -X POST -H "Accept: application/vnd.github.v3+json" \
-          -H "Authorization: token $GITHUB_TOKEN" \
-          https://api.github.com/repos/${{ github.repository }}/deployments \
-          -d "{\"ref\":\"${{ github.ref }}\",\"environment\":\"${{ env.DEPLOY_ENV }}\",\"description\":\"Deploying to ${{ env.DEPLOY_ENV }}\"}"
+        uses: chrnorm/deployment-action@v2
+        with:
+          environment: ${{ env.DEPLOY_ENV }}
+          description: "Deploying to ${{ env.DEPLOY_ENV }}"
+          token: ${{ secrets.GITHUB_TOKEN }}
+        id: create_deployment
 
       - name: Push to Dokku (${{ env.DEPLOY_ENV }})
         uses: dokku/github-action@v1.6.0
@@ -46,10 +45,10 @@ jobs:
 
       - name: Set Deployment Status to Success
         if: success()
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          curl -X POST -H "Accept: application/vnd.github.v3+json" \
-          -H "Authorization: token $GITHUB_TOKEN" \
-          https://api.github.com/repos/${{ github.repository }}/deployments/${{ steps.create_deployment.outputs.deployment_id }}/statuses \
-          -d "{\"state\":\"success\",\"environment\":\"${{ env.DEPLOY_ENV }}\",\"description\":\"Deployment completed successfully\"}"
+        uses: chrnorm/deployment-action@v2
+        with:
+          environment: ${{ env.DEPLOY_ENV }}
+          deployment_id: ${{ steps.create_deployment.outputs.deployment_id }}
+          status: success
+          token: ${{ secrets.GITHUB_TOKEN }}
+          description: "Deployment completed successfully"
