--- a/.github/workflows/service.yml
+++ b/.github/workflows/service.yml
@@ -32,8 +32,8 @@ jobs:
         with:
           environment: ${{ env.DEPLOY_ENV }}
           description: "Deploying to ${{ env.DEPLOY_ENV }}"
-          token: ${{ secrets.GITHUB_TOKEN }}
-        id: create_deployment
+          token: ${{ github.token }}
+        id: deployment
 
       - name: Push to Dokku (${{ env.DEPLOY_ENV }})
         uses: dokku/github-action@v1.6.0
@@ -43,12 +43,22 @@ jobs:
           branch: ${{ env.IS_PRODUCTION == 'true' && 'main' || 'develop' }}
           git_push_flags: --force
 
-      - name: Set Deployment Status to Success
+      - name: Update deployment status (success)
         if: success()
         uses: chrnorm/deployment-action@v2
         with:
           environment: ${{ env.DEPLOY_ENV }}
-          deployment_id: ${{ steps.create_deployment.outputs.deployment_id }}
-          status: success
-          token: ${{ secrets.GITHUB_TOKEN }}
+          deployment-id: ${{ steps.deployment.outputs.deployment_id }}
+          state: 'success'
+          token: ${{ github.token }}
           description: "Deployment completed successfully"
+
+      - name: Update deployment status (failure)
+        if: failure()
+        uses: chrnorm/deployment-action@v2
+        with:
+          environment: ${{ env.DEPLOY_ENV }}
+          deployment-id: ${{ steps.deployment.outputs.deployment_id }}
+          state: 'failure'
+          token: ${{ github.token }}
+          description: "Deployment failed"
