--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "removeComments": true,
     "isolatedModules": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "tests/**/*"],
   "exclude": ["node_modules", "dist"]
 }
