--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.3",
+    "@hono/node-server": "^1.13.6",
     "@types/node": "^22.7.5",
     "@types/ws": "^8.5.12",
     "dotenv": "^16.4.5",
     "esbuild": "^0.24.0",
+    "hono": "^4.6.9",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
     "vite-tsconfig-paths": "^5.0.1",
