--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
         "description": "Checking if the app responds to the /health endpoint",
         "path": "/health",
         "attempts": 3,
-        "port": 3000
+        "port": 3000,
+        "initialDelay": 10
       }
     ]
   }
