Changed so that the minimum seismic intensity can be specified

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,6 @@ NOSTR_PRIVATE_KEY="YOUR_NOST_PRIVATE_KEY"
 
 # Webhook URL
 WEBHOOK_URL="YOUR_WEBHOOK_URL"
+
+# Earthquake minimum scale
+EARTHQUAKE_MINIMUM_SCALE="0"
