--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,11 +1,3 @@
-name: Checks
-
-on:
-  push:
-    branches: ["main", "develop"]
-  pull_request:
-    branches: ["main", "develop"]
-
 jobs:
   lint:
     name: Lint
@@ -21,6 +13,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20.18.x"
+
+      - name: Set Up pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.15.0
 
       - name: Install Dependencies
         run: pnpm install
@@ -44,10 +41,15 @@ jobs:
         with:
           node-version: "20.18.x"
 
+      - name: Set Up pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.15.0
+
       - name: Install Dependencies
         run: pnpm install
 
-      - name: Run Biome
+      - name: Run Tests
         run: pnpm test
 
   scan:
@@ -73,4 +75,3 @@ jobs:
         uses: github/codeql-action/analyze@v3
         with:
           category: "/language:javascript-typescript"
-
