refactor: move folder config to settings

--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,11 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
-  "files": { "ignoreUnknown": false, "ignore": ["node_modules", "dist"] },
+  "files": {
+    "ignoreUnknown": false,
+    "ignore": ["node_modules", "dist"],
+    "include": ["scripts", "src", "test"]
+  },
   "formatter": {
     "enabled": true,
     "useEditorconfig": true,
