--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   "main": "index.js",
   "scripts": {
     "build": "node scripts/rm.mjs && node scripts/build.mjs",
-    "check": "biome check ./src",
-    "check:write": "biome check --write ./src",
+    "check": "biome check",
+    "check:write": "biome check --write",
     "dev": "NODE_ENV=development tsx src/index.ts",
-    "format": "biome format ./src",
-    "format:write": "biome format --write ./src",
-    "lint": "biome lint ./src",
+    "format": "biome format",
+    "format:write": "biome format --write",
+    "lint": "biome lint",
     "preinstall": "npx -y only-allow pnpm",
     "prepare": "husky",
     "sort": "node scripts/sort.mjs",
