--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "typescript.validate.enable": true,
-  "typescript.format.enable": true,
+  "typescript.format.enable": false,
   "editor.defaultFormatter": "biomejs.biome",
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
