feat: add support for five new languages

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ WEBHOOK_URL="YOUR_WEBHOOK_URL"
 EARTHQUAKE_MINIMUM_SCALE="0"
 
 ENABLE_LOGGER="true"
+
+# Language setting (en, ja, ko, fr, es, de, it)
+LANGUAGE="en"
