feat: add custom hashtag functionality

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,7 @@ ENABLE_LOGGER="true"
 
 # Language setting (en, ja, ko, fr, es, de, it)
 LANGUAGE="en"
+
+# Hashtags (comma-separated, optional, defaults to #evacuate)
+# Example: HASHTAGS="evacuate,emergency" will add #evacuate #emergency
+HASHTAGS="evacuate,test"
