feat: implement image generation feature

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,21 @@ LANGUAGE="en"
 # Hashtags (comma-separated, optional, defaults to #evacuate)
 # Example: HASHTAGS="evacuate,emergency" will add #evacuate #emergency
 HASHTAGS="evacuate,test"
+
+# Japan Map Settings
+ENABLE_MAP_GENERATION="true"
+MAP_OUTPUT_DIR="./earthquake_images"
+MAP_WIDTH="800"
+MAP_HEIGHT="600"
+MAP_BACKGROUND_COLOR="#F0F0F0"
+MAP_JAPAN_COLOR="#CCCCCC"
+MAP_EPICENTER_COLOR="#FF0000"
+MAP_INTENSITY_SCALE_1_COLOR="#FFFFFF"
+MAP_INTENSITY_SCALE_2_COLOR="#FFFF00"
+MAP_INTENSITY_SCALE_3_COLOR="#FFCC00"
+MAP_INTENSITY_SCALE_4_COLOR="#FF9900"
+MAP_INTENSITY_SCALE_5_LOWER_COLOR="#FF6600"
+MAP_INTENSITY_SCALE_5_UPPER_COLOR="#FF3300"
+MAP_INTENSITY_SCALE_6_LOWER_COLOR="#FF0000"
+MAP_INTENSITY_SCALE_6_UPPER_COLOR="#CC0000"
+MAP_INTENSITY_SCALE_7_COLOR="#990000"
